# M5Core2_Weather_Dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions-16MiB.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig  main.c
main/App/: App.cpp
main/App/Common/DataProc/: DP_Clock.cpp
main/App/Common/HAL/: HAL.h  HAL_Def.h
main/App/Pages/: AppFactory.cpp
main/App/Pages/StartUp/: StartUp.cpp  StartUpView.cpp
main/App/Pages/StatusBar/: StatusBar.cpp
main/App/Pages/Weather/: Weather.cpp  Weather.h  WeatherModel.cpp  WeatherModel.h  WeatherView.cpp  WeatherView.h
main/App/Resource/: ResourcePool.cpp
main/App/Resource/Font/: font_alibabasans_medium_36.c  font_alibabasans_regular_13.c  font_alibabasans_regular_17.c  font_alibabasans_regular_26.c  font_alibabasans_regular_32.c  font_alibabasans_regular_48.c  font_alibabasans_regular_60.c
main/App/Resource/Image/: img_src_alarm.c  img_src_battery_red.c  img_src_location.c  img_src_message.c  img_src_weather_0.c  img_src_weather_1.c  img_src_weather_10.c  img_src_weather_11.c  img_src_weather_12.c  img_src_weather_13.c  img_src_weather_14.c  img_src_weather_15.c  img_src_weather_16.c  img_src_weather_17.c  img_src_weather_18.c  img_src_weather_19.c  img_src_weather_2.c  img_src_weather_20.c  img_src_weather_21.c  img_src_weather_22.c  img_src_weather_23.c  img_src_weather_24.c  img_src_weather_25.c  img_src_weather_26.c  img_src_weather_27.c  img_src_weather_28.c  img_src_weather_29.c  (+18 more)
main/HAL/: CommonMacro.h  HAL.h  HAL_Clock.cpp  HAL_Power.cpp  HAL_Weather.cpp  HAL_WiFi.cpp
(+4 files in other folders)
